fixed actions duplicated on running entries, fixed layout issues

--- a/web-app/css/deploymentOverview.css
+++ b/web-app/css/deploymentOverview.css
@@ -213,6 +213,10 @@ td.status .animated .ui-progressbar-value { background-image: url(ui-lightness/i
 	display:inline-block;	
 }
 
+.wrapper .fastDeploy .planSelect {
+    width: 200px;
+}
+
 .fastDeploy input[type = submit]{
 	padding: 3px;
 	font-size: 10px;	
@@ -464,7 +468,7 @@ table .appView th{
 	padding: 2px 2px 2px 20px;
 	margin: 0px 0px 5px 5px;	
 	display:inline-block;
-	width:730px;
+	width:720px;
 }
 
 .entryDetails table tbody ul li:not(:first-child){
